Releasing through oss.sonatype.org